--- a/spring-boot/src/main/resources/templates/user/user.html
+++ b/spring-boot/src/main/resources/templates/user/user.html
@@ -5,7 +5,8 @@
     <title>User</title>
 </head>
 <body>
-<form th:action="@{/users/{userId}/update(userId=${user.id})}" th:object="${user}" method="post">
+<form th:action="@{/api/v1/users/{userId}/update(userId=${user.id})}" method="post"
+      th:object="${user}">
     <label for="username">Username:
         <input id="username" type="text" name="username" th:value="*{username}">
     </label><br>
@@ -19,7 +20,9 @@
         <input id="lastname" type="text" name="lastname" th:value="*{lastname}">
     </label><br>
     <div th:each="role : ${roles}">
-        <input th:id="${role}" name="role" type="radio" th:value="${role}" th:checked="${role == user.role}">
+        <input th:id="${role}" name="role" type="radio"
+               th:value="${role}"
+               th:checked="${role == user.role}">
         <label th:for="${role}" th:text="${role}">Role name</label>
     </div>
     <div>
@@ -33,6 +36,11 @@
         </label>
     </div>
     <button type="submit">Update</button>
+</form>
+
+<form th:action="@{/api/v1/users/{userId}/delete(userId=${user.id})}" method="post"
+      th:if="${user.role.name() == 'ADMIN'}">
+    <button type="submit">Delete</button>
 </form>
 
 </body>
