--- a/spring-boot/src/main/resources/templates/user/login.html
+++ b/spring-boot/src/main/resources/templates/user/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
 </head>
 <body>
-<form action="/login" method="post">
+<form action="/api/v1/login" method="post">
     <label for="username">Username:
         <input id="username" type="text" name="username">
     </label><br>
@@ -13,6 +13,9 @@
         <input id="password" type="password" name="password">
     </label><br>
     <button type="submit">Login</button>
+</form>
+<form action="/api/v1/users/registration">
+    <button type="submit">Registration</button>
 </form>
 </body>
 </html>
