--- a/spring-boot/src/main/resources/templates/user/registration.html
+++ b/spring-boot/src/main/resources/templates/user/registration.html
@@ -5,7 +5,7 @@
     <title>Registration</title>
 </head>
 <body>
-<form th:action="@{/api/v1/users}" method="post"
+<form th:action="@{/api/v1/users}" enctype="multipart/form-data" method="post"
       th:object="${user}">
     <label for="username">Username:
         <input id="username" type="text" name="username" th:value="*{username}">
@@ -18,6 +18,9 @@
     </label><br>
     <label for="lastname">Lastname:
         <input id="lastname" type="text" name="lastname" th:value="*{lastname}">
+    </label><br>
+    <label for="image">Image:
+        <input id="image" type="file" name="image">
     </label><br>
     <div th:each="role : ${roles}">
         <input th:id="${role}" name="role" type="radio"
