--- a/spring-boot/src/main/resources/templates/user/user.html
+++ b/spring-boot/src/main/resources/templates/user/user.html
@@ -19,6 +19,9 @@
     <label for="lastname">Lastname:
         <input id="lastname" type="text" name="lastname" th:value="*{lastname}">
     </label><br>
+    <div th:if="${user.image}">
+        <img th:src="@{/api/v2/users/{userId}/avatar(userId=${user.id})}" alt="User image">
+    </div>
     <label for="image">Image:
         <input id="image" type="file" name="image">
     </label><br>
