--- a/spring-boot/src/main/resources/templates/user/login.html
+++ b/spring-boot/src/main/resources/templates/user/login.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <form action="/api/v1/login" method="post">
+    <div style="color: red" th:if="${param.error}">
+        Bad credentials.
+    </div>
     <label for="username">Username:
         <input id="username" type="text" name="username">
     </label><br>
