--- a/spring-boot/src/main/resources/templates/user/registration.html
+++ b/spring-boot/src/main/resources/templates/user/registration.html
@@ -10,6 +10,9 @@
     <label for="username">Username:
         <input id="username" type="text" name="username" th:value="*{username}">
     </label><br>
+    <label for="rowPassword">Password:
+        <input id="rowPassword" type="password" name="rowPassword">
+    </label><br>
     <label for="birthDate">BirthDate:
         <input id="birthDate" type="date" name="birthDate" th:value="*{birthDate}">
     </label><br>
